--- a/niceTransposer.html
+++ b/niceTransposer.html
@@ -128,7 +128,7 @@
     <div class="content">
         <div class="text-area">
             <h4>原始文字：</h4>
-            <textarea id="input" placeholder="請輸入包含音名或和弦代號的文字，中間用空白分隔。例如：&#10;&#10;C C G G A A G&#10;&#10;或&#10;&#10;Cmaj7 | Am7 | Fmaj7 | G9sus | C(add2) ||"></textarea>
+            <textarea id="input" placeholder="請輸入包含音名或和弦代號的文字。例如：&#10;&#10;C C G G A A G&#10;&#10;或&#10;&#10;Cmaj7 | Am7 | Fmaj7 | G9sus | C(add2) ||"></textarea>
         </div>
         
         <div class="text-area">
